voltando com o bootstrap

--- a/hack-nu/app/views/objectives/new.html.erb
+++ b/hack-nu/app/views/objectives/new.html.erb
@@ -1,5 +1,13 @@
-<h1>New Objective</h1>
+<h1 class="titulo-principal">Qual seu maior sonho?</h1>
 
-<%= render 'form' %>
-
-<%= link_to 'Back', objectives_path %>
+<div class="row">
+  <div class="col-xs-12">
+    <div class="btn-group-vertical" role="group" aria-label="...">
+      <button type="button" class="btn btn-default navbar-btn">Viajar</button>
+      <button type="button" class="btn btn-default navbar-btn">Comprar um carro</button>
+      <button type="button" class="btn btn-default navbar-btn">Comprar um imóvel</button>
+      <button type="button" class="btn btn-default navbar-btn">Fazer faculdade</button>
+      <button type="button" class="btn btn-default navbar-btn">Outro</button>
+    </div>
+  </div>
+</div>
