comitando para pegar os ruby da pagina

--- a/hack-nu/app/views/objectives/new.html.erb
+++ b/hack-nu/app/views/objectives/new.html.erb
@@ -1,13 +1,23 @@
-<h1 class="titulo-principal">Qual seu maior sonho?</h1>
+<html>
+<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<title></title>
+</head>
+<body>
+	<h1 class="titulo-principal" style="text-align:center; font-size:3em">Qual seu maior sonho?</h1>
 
-<div class="row">
-  <div class="col-xs-12">
-    <div class="btn-group-vertical" role="group" aria-label="...">
-      <button type="button" class="btn btn-default navbar-btn">Viajar</button>
-      <button type="button" class="btn btn-default navbar-btn">Comprar um carro</button>
-      <button type="button" class="btn btn-default navbar-btn">Comprar um imóvel</button>
-      <button type="button" class="btn btn-default navbar-btn">Fazer faculdade</button>
-      <button type="button" class="btn btn-default navbar-btn">Outro</button>
-    </div>
-  </div>
-</div>
+
+	<div class="row">
+	  <div class="col-xs-12 text-center">
+	    <div class="btn-group-vertical" role="group" aria-label="...">
+	      <button type="button" class="btn btn-default navbar-btn">Viajar</button>	  
+	      <button type="button" class="btn btn-default navbar-btn">Comprar um carro</button>
+	      <button type="button" class="btn btn-default navbar-btn">Comprar um imóvel</button>
+	      <button type="button" class="btn btn-default navbar-btn">Fazer faculdade</button>
+	      <button type="button" class="btn btn-default navbar-btn">Outro</button>
+	    </div>
+	  </div>
+	</div>
+
+</body>
+</html>
