colocando style padrao em todas as telas

--- a/hack-nu/app/views/objectives/new.html.erb
+++ b/hack-nu/app/views/objectives/new.html.erb
@@ -6,7 +6,7 @@
 		  <div class="col-xs-12 text-center">
 		    <%= form_for(@objective) do |f| %>
 		      <div class="btn-group-vertical" style="width:95%" role="group" aria-label="...">
-		        <%= submit_tag 'Viajar', class: 'btn btn-default navbar-btn', style:"margin-bottom:10px; background-color:#678fa9; color:white; border:none; padding:10px 0px; font-size:1.5em" %>
+		        <%= submit_tag 'Viajar', name: 'travel', class: 'btn btn-default navbar-btn', style:"margin-bottom:10px; background-color:#678fa9; color:white; border:none; padding:10px 0px; font-size:1.5em" %>
 		        <%= submit_tag 'Comprar um carro', name: 'car', class: 'btn btn-default navbar-btn', style:"margin-bottom:10px; background-color:#678fa9; color:white; border:none; padding:10px 0px; font-size:1.5em" %>
 		        <%= submit_tag 'Comprar um imóvel', name: 'house', class: 'btn btn-default navbar-btn', style:"margin-bottom:10px; background-color:#678fa9; color:white; border:none; padding:10px 0px; font-size:1.5em" %>
 		        <%= submit_tag 'Fazer faculdade', name: 'faculty', class: 'btn btn-default navbar-btn', style:"margin-bottom:10px; background-color:#678fa9; color:white; border:none; padding:10px 0px; font-size:1.5em" %>
