--- a/hack-nu/app/views/layouts/application.html.erb
+++ b/hack-nu/app/views/layouts/application.html.erb
@@ -6,8 +6,26 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+
+	<style type="text/css">
+		h1{
+	 		text-align:center; 
+	 		font-size:2.8em; 
+	 		margin-top:40px; 
+	 		font-weight:bold; 
+	 		color:#d75c37
+	 	}
+
+	 	button{
+	 		text-align:center; 
+	 		font-size:2.8em; 
+	 		margin-top:40px; 
+	 		font-weight:bold; 
+	 		color:#d75c37;
+	 	}
+	 </style>
 </head>
-<body>
+<body style="background-color:#f2f2f2">
 
 <%= yield %>
 
