--- a/hack-nu/app/views/objectives/new.html.erb
+++ b/hack-nu/app/views/objectives/new.html.erb
@@ -1,5 +1,5 @@
-<body style="background-color:#f2f2f2">
-	<h1 class="titulo-principal" style="text-align:center; font-size:2.8em; margin-top:40px; font-weight:bold; color:#d75c37">Qual seu maior sonho?</h1>
+<body>
+	<h1 class="titulo-principal">Qual seu maior sonho?</h1>
 
 	<div class="container" style="margin-top:40px">
 		<div class="row">
