arrumando uma das perguntas

--- a/hack-nu/app/views/objectives/update_details.html.erb
+++ b/hack-nu/app/views/objectives/update_details.html.erb
@@ -17,7 +17,7 @@
 	   	 	</div>
 	   	 	<% elsif( @objective.name == 'Comprar um imóvel') %>
 			<div class="form-group">
-	      		<label for="disabledTextInput">Com que tipo de imóvel você sonha?</label>
+	      		<label for="disabledTextInput">Com que tipo de imóvel você deseja ter?</label>
 	      		<input style="width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px" type="text" id="disabledTextInput" class="form-control" placeholder="">
 	   	 	</div>
 	   	 	<% elsif( @objective.name == 'Fazer faculdade') %>
