arrumando algumas coisas que estavam quebradas

--- a/hack-nu/app/views/objectives/update_details.html.erb
+++ b/hack-nu/app/views/objectives/update_details.html.erb
@@ -2,7 +2,7 @@
 
 <div class="row" style="margin-top:40px">
 	
-	<div class="col-sm-offset-3 col-xs-12 text-center">
+	<div class="col-xs-12 text-center">
 		<form>
 		<% if( @objective.name == 'Viajar') %>
 			<div class="form-group">
