--- a/hack-nu/app/views/layouts/application.html.erb
+++ b/hack-nu/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 	 	}
 
 	 	label{
-	 		text-align:right; 
+	 		text-align:center; 
 	 		font-size:1.5em; 
 	 		margin-top:50px; 
 	 		font-weight:bold; 
