fazendo ajuste na tela valor aproximado

--- a/hack-nu/app/views/objectives/update_details_automatic.html.erb
+++ b/hack-nu/app/views/objectives/update_details_automatic.html.erb
@@ -29,15 +29,15 @@
 	      		<label for="disabledTextInput">Voce concorda?</label>
 	   	 	</div>
 	   	 	<div class="row">
-			   	<button id="idNao" class="btn btn-danger  col-sm-offset-4 col-xs-2" type="button" onclick="exibirInput();" >Nao</button>
-			   	<button type="submit" class="btn btn-primary col-sm-offset-1 col-xs-2">Sim</button>
+			   	<button id="idNao" class="btn btn-danger  col-xs-offset-4 col-xs-2" type="button" onclick="exibirInput();" >Nao</button>
+			   	<button type="submit" class="btn btn-primary col-xs-offset-1 col-xs-2">Sim</button>
 			</div>
    	 	</form>
 	</div>
 </div>
 
 <div class="row" style="margin-top:100px">	
-	<div class="col-sm-offset-3 col-xs-6 text-center">
+	<div class="col-xs-offset-3 col-xs-6 text-center">
 	<form>
 		<div class="form-group" id="exibirInput" style="display:none">
 		      		<h1>Quanto voce acha que vai custar?</h1>
