--- a/hack-nu/app/views/objectives/update_details_automatic.html.erb
+++ b/hack-nu/app/views/objectives/update_details_automatic.html.erb
@@ -40,10 +40,9 @@
 	<div class="col-xs-offset-3 col-xs-6 text-center">
 	<form>
 		<div class="form-group" id="exibirInput" style="display:none">
-		      		<h1>Quanto voce acha que vai custar?</h1>
-		      		<input type="text" id="disabledTextInput" class="form-control" placeholder="">
-		      		<button type="submit" class="btn btn-primary">Continuar</button>
-		   	 	</div>
+      		<h1>Quanto voce acha que vai custar?</h1>
+      		<input type="text" id="disabledTextInput" class="form-control" placeholder="">
+      		<button type="submit" class="btn btn-primary" style="margin-top:10px">Continuar</button>		 
 	 	</div>
  	</form>
 </div>
