--- a/hack-nu/app/views/objectives/update_details_automatic.html.erb
+++ b/hack-nu/app/views/objectives/update_details_automatic.html.erb
@@ -1,12 +1,12 @@
 <div class="row" id="principal" style="margin-top:100px">
 	<div class="col-xs-12 ">
-		<h1 class="center-block" style="text-align:center; font-size:3em">Valor medio aproximado:</h1>
+		<h1 class="center-block" style="text-align:center; font-size:2em">Valor médio aproximado:</h1>
 	</div>
 	<div class="col-xs-12" style="text-align:center; font-size:2em">
 		<form>
 			<% if( @objective.name == 'Viajar') %>
 				<div class="form-group">
-		      		<h2>R$ 8.000,00</h2>
+		      		<h2 style="font-size:1em; color:#605A5A">R$ 8.000,00</h2>
 		   	 	</div>
 	   	 	<% elsif( @objective.name == 'Comprar um carro') %>
 				<div class="form-group">
@@ -26,11 +26,13 @@
 		   	 	</div>
 	   	 	<% end %>
    	 		<div class="form-group">
-	      		<label for="disabledTextInput">Voce concorda?</label>
+	      		<label for="disabledTextInput" style="font-size:1em">Você concorda?</label>
 	   	 	</div>
 	   	 	<div class="row">
-			   	<button id="idNao" class="btn btn-danger  col-xs-offset-4 col-xs-2" type="button" onclick="exibirInput();" >Nao</button>
-			   	<button type="submit" class="btn btn-primary col-xs-offset-1 col-xs-2">Sim</button>
+	   	 		<div class="col-xs-12 text-center">
+				   	<button id="idNao" class="btn btn-danger" type="button" onclick="exibirInput();" style="width:30%; border:none">Não</button>
+				   	<button type="submit" class="btn btn-primary" style="width:30%; background-color:#678fa9; border:none">Sim</button>
+			   	</div>
 			</div>
    	 	</form>
 	</div>
