--- a/hack-nu/app/views/user/index.html.erb
+++ b/hack-nu/app/views/user/index.html.erb
@@ -119,7 +119,7 @@
               <br>
               <input type="password" placeholder="password" name="password">
               <br>
-              <input type="button" value="Login">
+              <%= link_to "Login!" , '/objectives/new', class: 'btn btn-default navbar-btn'%>
             </div> 
           </div>
         </div>
