--- a/hack-nu/app/views/objectives/edit.html.erb
+++ b/hack-nu/app/views/objectives/edit.html.erb
@@ -1,6 +1,33 @@
-<h1>Editing Objective</h1>
+<div class="container">
+  <div class="row">
+    <h1>Meu sonho</h1>
+    <div class="col-xs-12 col-md-12">
+      <p><%= @objective.name %> - <%= @objective.details %></p>
+    </div>
+  </div>
 
-<%= render 'form' %>
-
-<%= link_to 'Show', @objective %> |
-<%= link_to 'Back', objectives_path %>
+  <div class="col-xs-12">
+    <div class="progress">
+      <div class="progress-bar progress-bar-success progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
+        <%= "20% Completo " %>
+        <span class="sr-only">20</span>
+      </div>
+    </div>
+    <%= form_for(@objective) do |f| %>
+      <div class="form-group">
+        <label for="disabledTextInput">Quanto quero gastar?</label>
+        <%= f.text_field :amount, style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px", class: "form-control", placeholder: @objective.amount %>
+      </div>
+      <div class="form-group">
+        <label for="disabledTextInput">Em quanto tempo eu quero <%= (@objective.name).downcase %>?</label>
+        <%= f.text_field :time, style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px", class: "form-control", placeholder: @objective.amount %>
+      </div>
+      <div class="form-group">
+        <label for="disabledTextInput">Quanto eu quero investir mensalmente?</label>
+        <%= f.text_field :monthly_amount, style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px", class: "form-control", placeholder: @objective.amount %>
+      </div>
+    <%= submit_tag 'Recalcular isso ai', class: "btn btn-primary", style:"background-color:#678fa9; border:none; margin-top:60px; width:55%; padding:13px; font-weight:bold; font-size:1.2em" %>
+    <% end %>
+    <%= link_to 'Legal, e o que eu tenho que fazer pra isso acontecer?', class: "btn btn-primary" %>
+  </div>
+</div>
