--- a/hack-nu/app/views/plannings/index.html.erb
+++ b/hack-nu/app/views/plannings/index.html.erb
@@ -1,14 +1,14 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Plannings</h1>
+<h1>Meu planejamento</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Category</th>
-      <th>Subcategory</th>
-      <th>Value</th>
+      <th>Tipo|</th>
+      <th>Categoria|</th>
+      <th>Subcategoria|</th>
+      <th>Valor</th>
       <th colspan="3"></th>
     </tr>
   </thead>
