criacao da tela de cadastro de conta bancaria

--- a/hack-nu/app/views/objectives/add_credit_card.html.erb
+++ b/hack-nu/app/views/objectives/add_credit_card.html.erb
@@ -27,6 +27,8 @@
 	          <label for="disabledTextInput">Senha</label>
 	          <%= f.text_field :details, style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px", class: "form-control" %>
 	        </div>
+
+	        <label>Observacao: utilizaremos seus dados somente para leitura.</label>
 	    <%= submit_tag 'Salvar', class: "btn btn-primary", style:"background-color:#678fa9; border:none; margin-top:60px; width:55%; padding:13px; font-weight:bold; font-size:1.2em" %>
 	    <% end %>
 	</div>		
