--- a/hack-nu/app/views/objectives/edit.html.erb
+++ b/hack-nu/app/views/objectives/edit.html.erb
@@ -1,8 +1,10 @@
 <div class="container">
   <div class="row">
-    <h1>Meu sonho</h1>
-    <div class="col-xs-12 col-md-12">
-      <p><%= @objective.name %> - <%= @objective.details %></p>
+    <div class="col-xs-12">
+      <h1 style="margin-bottom:20px;">Meu sonho</h1>
+      <div class="col-xs-12 col-md-12">
+        <p><%= @objective.name %> - <%= @objective.details %></p>
+      </div>
     </div>
   </div>
 
@@ -19,7 +21,7 @@
         <%= form_for(@objective) do |f| %>
           <div class="form-group" style="text-align:center">
             <label for="disabledTextInput">Quanto você quer gastar?</label>
-            <%= f.text_field :amount, style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px", class: "form-control", placeholder: @objective.amount %>
+            <%= f.text_field :amount, style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px", class: "form-control", placeholder: number_to_currency(@objective.amount, unit: "R$") %>
           </div>
           <div class="form-group" style="text-align:center">
             <label for="disabledTextInput">Em quanto tempo você quer <%= (@objective.name).downcase %>?</label>
@@ -29,9 +31,11 @@
             <label for="disabledTextInput">Quanto você quer investir mensalmente?</label>
             <%= f.text_field :monthly_amount, style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px", class: "form-control", placeholder: @objective.amount %>
           </div>
-        <%= submit_tag 'Recalcular isso ai', class: "btn btn-primary", style:"background-color:#678fa9; border:none; margin-top:60px; width:55%; padding:13px; font-weight:bold; font-size:1.2em" %>
+        <%= submit_tag 'Salvas mudanças', class: "btn btn-primary", style:"background-color:#678fa9; border:none; margin-top:30px; width:55%; padding:13px; font-weight:bold; font-size:1.2em" %>
         <% end %>
-        <%= link_to 'Legal, e o que eu tenho que fazer pra isso acontecer?', plannings_path , class: "btn btn-primary", style:"background-color:#678fa9; border:none; margin-top:60px; width:55%; padding:13px; font-weight:bold; font-size:1.2em" %>
+        <div style="margin-bottom:40px">
+          <%= link_to 'Ir para planejamento', plannings_path , class: "btn btn-primary", style:"background-color:#678fa9; border:none; margin-top:20px; width:55%; padding:13px; font-weight:bold; font-size:1.2em" %>
+        </div>
       </div>
   </div>
 </div>
