--- a/hack-nu/app/views/plannings/index.html.erb
+++ b/hack-nu/app/views/plannings/index.html.erb
@@ -2,6 +2,13 @@
   <div class="row">
     <h1>Meu planejamento</h1>
     <div class="col-xs-12 col-md-12">
+      <div class="col-xs-12">
+        <div class="progress">
+          <div class="progress-bar progress-bar-success progress-bar" role="progressbar" aria-valuenow="<%=@fix_expense%>" aria-valuemin="0" aria-valuemax="100" style="width: <%=@fix_expense%>%">
+            <%= @fix_expense"% Despesas fixas " %>
+            <span class="sr-only"><%=@fix_expense%></span>
+          </div>
+        </div>
     </div>
   </div>
 </div>
