--- a/hack-nu/app/views/objectives/edit.html.erb
+++ b/hack-nu/app/views/objectives/edit.html.erb
@@ -21,7 +21,7 @@
         <%= form_for(@objective) do |f| %>
           <div class="form-group" style="text-align:center">
             <label for="disabledTextInput">Quanto você quer gastar?</label>
-            <%= f.text_field :amount, style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px", class: "form-control", placeholder: number_to_currency(@objective.amount, unit: "R$") %>
+            <%= f.text_field :amount, :value => number_to_currency(f.object.amount, unit: "R$", separator: ",", delimiter: ""), style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px", class: "form-control", placeholder: number_to_currency(@objective.amount, unit: "R$", separator: ",", delimiter: "") %>
           </div>
           <div class="form-group" style="text-align:center">
             <label for="disabledTextInput">Em quanto tempo você quer <%= (@objective.name).downcase %>?</label>
