arrumando a cor do botao que o bolinho estragou

--- a/hack-nu/app/views/objectives/update_details_automatic.html.erb
+++ b/hack-nu/app/views/objectives/update_details_automatic.html.erb
@@ -31,8 +31,7 @@
         <div class="row">
           <div class="col-xs-12 text-center">
             <button id="idNao" class="btn btn-danger" type="button" onclick="exibirInput();" style="width:30%; border:none">Não</button>
-            <%= link_to "Sim" , '/users/new', class: 'btn btn-primary', style: 'width:30%', border: 'none', background_color: '#678fa9'%>
-            
+            <%= link_to "Sim" , '/users/new', class: 'btn btn-primary', style: 'width:30%; border: none; background_color: #678fa9; color: white;' %>
           </div>
       </div>
       </form>
