--- a/hack-nu/app/views/account_data/show.html.erb
+++ b/hack-nu/app/views/account_data/show.html.erb
@@ -1,22 +1,22 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>User:</strong>
+  <strong>E-mail:</strong>
   <%= @account_datum.user_id %>
 </p>
 
 <p>
-  <strong>Amount:</strong>
+  <strong>Quantidade:</strong>
   <%= @account_datum.amount %>
 </p>
 
 <p>
-  <strong>Category:</strong>
+  <strong>Categoria:</strong>
   <%= @account_datum.category %>
 </p>
 
 <p>
-  <strong>Name:</strong>
+  <strong>Nome:</strong>
   <%= @account_datum.name %>
 </p>
 
