--- a/hack-nu/app/views/account_data/index.html.erb
+++ b/hack-nu/app/views/account_data/index.html.erb
@@ -5,10 +5,10 @@
 <table>
   <thead>
     <tr>
-      <th>User</th>
-      <th>Amount</th>
-      <th>Category</th>
-      <th>Name</th>
+      <th>E-mail </th>
+      <th>Valor despesa</th>
+      <th>Categoria</th>
+      <th>Nome</th>
       <th colspan="3"></th>
     </tr>
   </thead>
