--- a/hack-nu/app/views/account_data/new.html.erb
+++ b/hack-nu/app/views/account_data/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Account Datum</h1>
+<h1>Dados da nova conta</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', account_data_path %>
+
+<%= link_to 'Voltar', account_data_path,class:'btn btn-danger' , style: "color:white; border:none; margin-top:60px; width:30%; padding:13px; font-weight:bold; font-size:1.2em" %>
+</div>
