arrumando o espacamento dos botoes no fim da tela

--- a/hack-nu/app/views/objectives/update_details.html.erb
+++ b/hack-nu/app/views/objectives/update_details.html.erb
@@ -34,7 +34,7 @@
             <%= f.text_field :amount, style: "width:90%; margin: 0 auto; padding: 20px;", class: "form-control" %>
             <%= link_to "Não sei, me diga!" , update_details_automatic_objective_path %>
           </div>
-          <%= submit_tag 'Continuar', class: "btn btn-primary", style:"background-color:#678fa9; border:none; margin-top:60px; width:55%; padding:13px; font-weight:bold; font-size:1.2em" %>
+          <%= submit_tag 'Continuar', class: "btn btn-primary", style:"background-color:#678fa9; border:none; margin-top:60px; margin-bottom:40px; width:55%; padding:13px; font-weight:bold; font-size:1.2em" %>
         <% end %>
       </div>
     </div>
