--- a/hack-nu/app/views/users/new.html.erb
+++ b/hack-nu/app/views/users/new.html.erb
@@ -36,5 +36,5 @@
     <label for="disabledTextInput">Vestuário</label>
     <%= f.text_field :dressing, style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px", class: "form-control" %>
   </div>
-  <%= submit_tag 'Planejamento automático, aí vou eu!', class: "btn btn-primary", style:"background-color:#678fa9; border:none; margin-top:60px; width:60%; padding:13px; font-weight:bold; font-size:1.2em" %>
+  <%= submit_tag 'Planejamento automático, aí vou eu!', class: "btn btn-primary", style:"background-color:#678fa9; border:none; margin-top:60px; margin-bottom:40px; width:60%; padding:13px; font-weight:bold; font-size:1.2em" %>
 <% end%>
