--- a/hack-nu/app/views/account_data/_form.html.erb
+++ b/hack-nu/app/views/account_data/_form.html.erb
@@ -12,19 +12,19 @@
   <% end %>
 
   <div class="field text-center">
-    <label>Valor de despesa</label><br>
+    <label>Nome da despesa</label><br>
+    <%= f.text_field :name, style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px", class: "form-control"  %>
+  </div>
+  <div class="field text-center">
+    <label>Valor da despesa</label><br>
     <%= f.text_field :amount, style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px", class: "form-control"  %>
   </div>
   <div class="field text-center">
     <label>Categoria</label><br>
     <%= f.text_field :category, style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px", class: "form-control"  %>
   </div>
-  <div class="field text-center">
-    <label>Nome</label><br>
-    <%= f.text_field :name, style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px", class: "form-control"  %>
-  </div>
   <div class="actions  text-center">
-    
+
 <%= link_to 'Voltar', account_data_path,class:'btn btn-danger' , style: "color:white; border:none; margin-top:60px; width:30%; padding:13px; font-weight:bold; font-size:1.2em" %>
     <%= f.submit 'Salvar', class: "btn btn-primary", style:"background-color:#678fa9; border:none; margin-top:60px; width:30%; padding:13px; font-weight:bold; font-size:1.2em" %>
 </div>
