--- a/hack-nu/app/views/users/new.html.erb
+++ b/hack-nu/app/views/users/new.html.erb
@@ -9,32 +9,39 @@
     <%= f.text_field :monthly_income, style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px", class: "form-control" %>
   </div>
   <p>Se você quiser acelerar o processo e tornar tudo mais fácil, conecte a sua conta bancária:</p>
-  <a  class= 'btn btn-default navbar-btn' style="color:#7f7f7f; text-decoration:underline" href="">Conectar conta</a>
-  <a  class= 'btn btn-default navbar-btn' style="color:#7f7f7f; text-decoration:underline" href="">Não quero. Gosto de cadastrar todos os meus gastos um a um e não aproveitar esse tempo</a>
-  <h2> Ajude-nos a entender melhor o que você gosta mais de fazer. Enumere os itens mais importantes para você: </h2>
-  <div class="form-group">
-    <label for="disabledTextInput">Compras</label>
-    <%= f.text_field :shop, style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px", class: "form-control" %>
-    <label for="disabledTextInput">Bares/Restaurantes</label>
-    <%= f.text_field :bar, style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px", class: "form-control" %>
-    <label for="disabledTextInput">Presentes</label>
-    <%= f.text_field :gift, style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px", class: "form-control" %>
-    <label for="disabledTextInput">Educação</label>
-    <%= f.text_field :education, style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px", class: "form-control" %>
-    <label for="disabledTextInput">Saúde</label>
-    <%= f.text_field :health, style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px", class: "form-control" %>
-    <label for="disabledTextInput">Serviços</label>
-    <%= f.text_field :services, style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px", class: "form-control" %>
-    <label for="disabledTextInput">Transporte</label>
-    <%= f.text_field :transport, style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px", class: "form-control" %>
-    <label for="disabledTextInput">Lazer</label>
-    <%= f.text_field :leisure, style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px", class: "form-control" %>
-    <label for="disabledTextInput">Eletrônicos</label>
-    <%= f.text_field :electronics, style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px", class: "form-control" %>
-    <label for="disabledTextInput">Viagem</label>
-    <%= f.text_field :travel, style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px", class: "form-control" %>
-    <label for="disabledTextInput">Vestuário</label>
-    <%= f.text_field :dressing, style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px", class: "form-control" %>
+  <a  class= 'btn btn-default navbar-btn' style="color:#7f7f7f; text-decoration:underline" href="">Cadastrar Conta</a>
+  <a  class= 'btn btn-default navbar-btn' style="color:#7f7f7f; text-decoration:underline" href="">Gostaria de cadastrar todos os meus gastos</a>
+  <h2> Ajude-nos a entender melhor o que você gosta de fazer. Enumere os itens de 1 à 10, sendo 1 o mais IMPORTANTE e 10 o menos RELEVANTE. Itens a baixo:</h2>
+  <div class="container">
+  <div class="row">
+    <div class="col-xs-1">
+      <div class="form-group">
+        <label for="disabledTextInput">Compras</label>
+        <%= f.select :shop, [['1','1'],['2','2'],['3','3'],['4','4'],['5','5'],['6','6'],['7','7'],['8','8'],['9','9'],['10','10'],['11','11']],style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px" %>
+        <label for="disabledTextInput">Bares/Restaurantes</label>
+        <%= f.select :bar, [['1','1'],['2','2'],['3','3'],['4','4'],['5','5'],['6','6'],['7','7'],['8','8'],['9','9'],['10','10'],['11','11']] %>
+        <label for="disabledTextInput">Presentes</label>
+        <%= f.select :gift, [['1','1'],['2','2'],['3','3'],['4','4'],['5','5'],['6','6'],['7','7'],['8','8'],['9','9'],['10','10'],['11','11']] %>
+        <label for="disabledTextInput">Educação</label>
+        <%= f.select :education, [['1','1'],['2','2'],['3','3'],['4','4'],['5','5'],['6','6'],['7','7'],['8','8'],['9','9'],['10','10'],['11','11']] %>
+        <label for="disabledTextInput">Saúde</label>
+        <%= f.select :health, [['1','1'],['2','2'],['3','3'],['4','4'],['5','5'],['6','6'],['7','7'],['8','8'],['9','9'],['10','10'],['11','11']] %>
+        <label for="disabledTextInput">Serviços</label>
+        <%= f.select :services, [['1','1'],['2','2'],['3','3'],['4','4'],['5','5'],['6','6'],['7','7'],['8','8'],['9','9'],['10','10'],['11','11']] %>
+        <label for="disabledTextInput">Transporte</label>
+        <%= f.select :transport, [['1','1'],['2','2'],['3','3'],['4','4'],['5','5'],['6','6'],['7','7'],['8','8'],['9','9'],['10','10'],['11','11']] %>
+        <label for="disabledTextInput">Lazer</label>
+        <%= f.select :leisure, [['1','1'],['2','2'],['3','3'],['4','4'],['5','5'],['6','6'],['7','7'],['8','8'],['9','9'],['10','10'],['11','11']] %>
+        <label for="disabledTextInput">Eletrônicos</label>
+        <%= f.select :electronics, [['1','1'],['2','2'],['3','3'],['4','4'],['5','5'],['6','6'],['7','7'],['8','8'],['9','9'],['10','10'],['11','11']] %>
+        <label for="disabledTextInput">Viagem</label>
+        <%= f.select :travel, [['1','1'],['2','2'],['3','3'],['4','4'],['5','5'],['6','6'],['7','7'],['8','8'],['9','9'],['10','10'],['11','11']] %>
+        <label for="disabledTextInput">Vestuário</label>
+        <%= f.select :dressing, [['1','1'],['2','2'],['3','3'],['4','4'],['5','5'],['6','6'],['7','7'],['8','8'],['9','9'],['10','10'],['11','11']] %>
+        <!--<%= f.text_field :dressing, style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px", class: "form-control" %>-->
+      </div>
+    </div>
+    </div>
   </div>
-  <%= submit_tag 'Planejamento automático, aí vou eu!', class: "btn btn-primary", style:"background-color:#678fa9; border:none; margin-top:60px; width:55%; padding:13px; font-weight:bold; font-size:1.2em" %>
+  <%= submit_tag 'Veja seu planejamento!', class: "btn btn-primary", style:"background-color:#678fa9; border:none; margin-top:60px; width:250px; padding:13px; font-weight:bold; font-size:1.2em" %>
 <% end%>
