Modify email corpus

--- a/hack-nu/app/views/user_mailer/welcome_email.html.erb
+++ b/hack-nu/app/views/user_mailer/welcome_email.html.erb
@@ -4,14 +4,14 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Olá, <%= @account_datum.name %> !</h1>
+    <h1>Olá, André !</h1>
     <p>
       Notamos que ultimamente seus gastos estão assim:<br>
       <img src="http://67.media.tumblr.com/tumblr_mak6ktGGkA1ru90dzo1_250.gif" alt="vacilao" style="width:304px;height:228px">
       <br>
     </p>
     </p>
-    <p>Manera um pouco mais nas saidas de sexta, você está atrasando sua viagem em 35 dias !</p><br>
+    <p>Manera um pouco mais nas saidas de sexta, como ir ao <%= @account_datum.name %>  varias vezes você está atrasando sua viagem em 35 dias !</p><br>
     <p>Torcemos que você realize seu sonho <3</p> <br>
   </body>
 </html>
