--- a/hack-nu/app/views/plannings/index.html.erb
+++ b/hack-nu/app/views/plannings/index.html.erb
@@ -76,6 +76,6 @@
           </div>
         </div>
       </div>
-      <%= link_to 'Adicionar conta manual', new_account_datum_path, class: 'btn btn-primary', style: 'width:50%; border: none; background_color: #678fa9; color: white;'%>
+      <%= link_to 'Adicionar nova despesa', new_account_datum_path, class: 'btn btn-primary', style: 'width:50%; border: none; background_color: #678fa9; color: white;'%>
   </div>
 </div>
