--- a/hack-nu/app/views/plannings/index.html.erb
+++ b/hack-nu/app/views/plannings/index.html.erb
@@ -76,6 +76,7 @@
           </div>
         </div>
       </div>
-      <%= link_to 'Adicionar conta manual', new_account_datum_path, class: 'btn btn-primary', style: 'width:50%; border: none; background_color: #678fa9; color: white;'%>
+      <%= link_to 'Adicionar despesa manual', new_account_datum_path, class: 'btn btn-primary', style: "background-color:#678fa9; color:white; border:none; margin-top:20px; width:55%; padding:13px; font-weight:bold; font-size:1.2em"%>
+      <%= link_to 'Ver mais detalhes das contas', account_data_path , class: "btn btn-primary", style:"background-color:#678fa9; color:white; border:none; margin-top:20px; width:55%; padding:13px; font-weight:bold; font-size:1.2em" %>
   </div>
 </div>
