--- a/hack-nu/app/views/account_data/index.html.erb
+++ b/hack-nu/app/views/account_data/index.html.erb
@@ -1,28 +1,22 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Account Data</h1>
+<h1>Detalhes dos gastos gerais</h1>
 
-<table>
-  <thead>
+<table class="table">
+  <thead class='list-group'>
     <tr>
-      <th>E-mail </th>
-      <th>Valor despesa</th>
-      <th>Categoria</th>
-      <th>Nome</th>
-      <th colspan="3"></th>
+      <th scope="row">Valor despesa</th>
+      <th scope="row">Categoria</th>
+      <th scope="row">Nome</th>
     </tr>
   </thead>
 
   <tbody>
     <% @account_data.each do |account_datum| %>
       <tr>
-        <td><%= account_datum.user_id %></td>
         <td><%= account_datum.amount %></td>
         <td><%= account_datum.category %></td>
         <td><%= account_datum.name %></td>
-        <td><%= link_to 'Show', account_datum %></td>
-        <td><%= link_to 'Edit', edit_account_datum_path(account_datum) %></td>
-        <td><%= link_to 'Destroy', account_datum, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
