--- a/hack-nu/app/views/users/new.html.erb
+++ b/hack-nu/app/views/users/new.html.erb
@@ -9,8 +9,8 @@
     <%= f.text_field :monthly_income, style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px", class: "form-control" %>
   </div>
   <p>Se você quiser acelerar o processo e tornar tudo mais fácil, conecte a sua conta bancária:</p>
-  <a  class= 'btn btn-default navbar-btn' style="color:#7f7f7f; text-decoration:underline" href="">Cadastrar Conta</a>
-  <a  class= 'btn btn-default navbar-btn' style="color:#7f7f7f; text-decoration:underline" href="">Gostaria de cadastrar todos os meus gastos</a>
+  <%= link_to 'Cadastrar Conta', add_credit_card_objective_path(Objective.last), class: 'btn btn-primary', style: "background-color:#678fa9; color:white; border:none; margin-top:20px; width:55%; padding:13px; font-weight:bold; font-size:1.2em"%>
+  <%= link_to 'Gostaria de cadastrar todos os meus gastos', new_account_datum_path, class: 'btn btn-primary', style: "background-color:#678fa9; color:white; border:none; margin-top:20px; width:55%; padding:13px; font-weight:bold; font-size:1.2em"%>
   <h2> Ajude-nos a entender melhor o que você gosta de fazer. Enumere os itens de 1 à 10, sendo 1 o mais IMPORTANTE e 10 o menos RELEVANTE. Itens a baixo:</h2>
   <div class="container">
   <div class="row">
