--- a/hack-nu/app/views/users/index.html.erb
+++ b/hack-nu/app/views/users/index.html.erb
@@ -88,7 +88,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#"><span>Brand</span></a>
+            <a class="navbar-brand" href="#"><span>Dreamup</span></a>
           </div>
           <div class="collapse navbar-collapse" id="navbar-ex-collapse">
             <ul class="nav navbar-nav navbar-right">
@@ -107,10 +107,10 @@
         <div class="row">
           <div class="col-md-12 text-center">
             <h1>
-              <font color="#d75c37" size="7" font-weight="bold">Heading</font>
+              <font color="#d75c37" size="7" font-weight="bold">DREAMUP</font>
             </h1>
             <p>
-              <font color="#fffff" size="5">Planejando para realizar seus sonhos.</font>
+              <font color="#fffff" size="5">Planejando seus gastos e realizando seus sonhos.</font>
             </p>
             <br>	
             <br>
