--- a/hack-nu/app/views/objectives/add_credit_card.html.erb
+++ b/hack-nu/app/views/objectives/add_credit_card.html.erb
@@ -10,25 +10,23 @@
 <div class="row">
 
   <div class="col-xs-12 text-center">
-    <%= form_for(@objective) do |f| %>
-        <div class="form-group">
-          <label for="disabledTextInput">Banco</label>
-          <%= f.text_field :details, style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px", class: "form-control" %>
-        </div>
-        <div class="form-group">
-          <label for="disabledTextInput">Agencia</label>
-          <%= f.text_field :details, style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px", class: "form-control" %>
-        </div>
-        <div class="form-group">
-          <label for="disabledTextInput">Conta</label>
-          <%= f.text_field :details, style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px", class: "form-control" %>
-        </div>
+    <div class="form-group">
+      <label for="disabledTextInput">Banco</label>
+      <%= text_field :details, style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px", class: "form-control" %>
+    </div>
+    <div class="form-group">
+      <label for="disabledTextInput">Agencia</label>
+      <%= text_field :details, style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px", class: "form-control" %>
+    </div>
+    <div class="form-group">
+      <label for="disabledTextInput">Conta</label>
+      <%= text_field :details, style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px", class: "form-control" %>
+    </div>
 
-        <div class="form-group">
-          <label for="disabledTextInput">Senha</label>
-          <%= f.text_field :details, style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px", class: "form-control" %>
-        </div>
-        <%= submit_tag 'Salvar', class: "btn btn-primary", style:"background-color:#678fa9; border:none; margin-top:60px; width:55%; padding:13px; font-weight:bold; font-size:1.2em" %>
-      <% end %>
+    <div class="form-group">
+      <label for="disabledTextInput">Senha</label>
+      <%= text_field :details, style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px", class: "form-control" %>
+    </div>
+    <%= link_to 'Salvar', new_user_path, class: "btn btn-primary", style: "background-color:#678fa9; color:white; border:none; margin-top:20px; width:55%; padding:13px; font-weight:bold; font-size:1.2em" %>
   </div>
 </div>
