Add application name

--- a/hack-nu/app/views/layouts/application.html.erb
+++ b/hack-nu/app/views/layouts/application.html.erb
@@ -2,25 +2,25 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title>HackNu</title>
+  <title>DreamUp</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 
 	<style type="text/css">
 		h1{
-	 		text-align:center; 
-	 		font-size:2.8em; 
-	 		margin-top:40px; 
-	 		font-weight:bold; 
+	 		text-align:center;
+	 		font-size:2.8em;
+	 		margin-top:40px;
+	 		font-weight:bold;
 	 		color:#d75c37
 	 	}
 
 	 	label{
-	 		text-align:center; 
-	 		font-size:1.5em; 
-	 		margin-top:50px; 
-	 		font-weight:bold; 
+	 		text-align:center;
+	 		font-size:1.5em;
+	 		margin-top:50px;
+	 		font-weight:bold;
 	 		color:#d75c37
 	 	}
 	</style>
